force-app/main/default/objects/ARTL_Bill_Format__mdt/ARTL_Bill_Format__mdt.object-meta.xml
<CustomObject>
    <label>Bill Format</label>
    <pluralLabel>Bill Formats</pluralLabel>
</CustomObject>