force-app/main/default/objects/ARTL_Bill_Format__mdt/fields/ARTL_BF_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_BF_Code__c</fullName>
    <label>Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>