force-app/main/default/objects/ARTL_Bill_Format__mdt/fields/ARTL_BF_Product__c.field-meta.xml
<CustomField>
    <fullName>ARTL_BF_Product__c</fullName>
    <label>Product</label>
    <length>30</length>
    <type>Text</type>
</CustomField>