force-app/main/default/objects/ARTL_Bill_Format__mdt/fields/ARTL_Bill_Format__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Bill_Format__c</fullName>
    <label>Bill Format</label>
    <length>30</length>
    <type>Text</type>
</CustomField>