force-app/main/default/objects/ARTL_Bill_Format__mdt/fields/ARTL_Usage_Flag__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Usage_Flag__c</fullName>
    <label>Usage Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>